--- a/jsapp/calendar/CalendarTester.html
+++ b/jsapp/calendar/CalendarTester.html
@@ -18,12 +18,13 @@
 
 <script type="text/javascript" src="../../yui-3-app/CalendarTestPanel/CalendarTestPanel.js"></script>
 <script type="text/javascript" src="../../yui-3-ext/CalendarPanel/CalendarPanel.js"></script>
-<!--  script type="text/javascript" src="../../yui-3-ext/CalendarExt/CalendarExt.js"></script -->
 <script type="text/javascript" src="../../yui-3-ext/Date/MyDate.js"></script>
 <script type="text/javascript" src="../../yui-3-ext/Country/FeastGerman.js"></script>
 <script type="text/javascript" src="../../yui-3-ext/Language/LanguagePack.js"></script>
+<script type="text/javascript" src="../../yui-3-ext/LeftPanel/LeftPanel.js"></script>
 <script type="text/javascript" src="../../yui-3-ext/CalendarMultiPane/CalendarMultiPane.js"></script>
 <script type="text/javascript" src="../../yui-3-ext/Culture/CultureEuropean.js"></script>
+<script type="text/javascript" src="../../yui-3-ext/Plugins/CalendarFeastPlugin/HolidayCalculator.js"></script>
 <script type="text/javascript" src="../../yui-3-ext/Plugins/CalendarFeastPlugin/CalendarFeastPlugin.js"></script>
 <script type="text/javascript" src="../../yui-3-ext/Plugins/CalendarSelectionConstrain/CalendarSelectionConstrain.js"></script>
 <script type="text/javascript" src="CalendarTester.js"></script>
@@ -33,7 +34,7 @@
 
 <body>
 	<div id="document_root" style="position:absolute;left:1;top:1;width:100%;height:100%;background-color:#d0d0fe">
-		<div id="demo" class="yui3-skin-sam yui3-g"  >
+		<div id="wrapper" class="yui3-skin-sam yui3-g"  >
 		     <div id="panel_root" class="yui3-u"></div>
 		</div>
 	</div>
