--- a/jsapp/calendar/CalendarTester.html
+++ b/jsapp/calendar/CalendarTester.html
@@ -16,8 +16,8 @@
 
 <script src="http://yui.yahooapis.com/3.4.1/build/yui/yui-min.js"></script>
 
-<script type="text/javascript" src="../../yui-3-app/CalendarTestPanel/CalendarTestPanel.js"></script>
-<script type="text/javascript" src="../../yui-3-ext/CalendarPanel/CalendarPanel.js"></script>
+<!--  script type="text/javascript" src="../../yui-3-app/CalendarTestPanel/CalendarTestPanel.js"></script -->
+<!-- script type="text/javascript" src="../../yui-3-ext/CalendarPanel/CalendarPanel.js"></script>
 <script type="text/javascript" src="../../yui-3-ext/Date/MyDate.js"></script>
 <script type="text/javascript" src="../../yui-3-ext/Country/FeastGerman.js"></script>
 <script type="text/javascript" src="../../yui-3-ext/Language/LanguagePack.js"></script>
@@ -26,7 +26,7 @@
 <script type="text/javascript" src="../../yui-3-ext/Culture/CultureEuropean.js"></script>
 <script type="text/javascript" src="../../yui-3-ext/Plugins/CalendarFeastPlugin/HolidayCalculator.js"></script>
 <script type="text/javascript" src="../../yui-3-ext/Plugins/CalendarFeastPlugin/CalendarFeastPlugin.js"></script>
-<script type="text/javascript" src="../../yui-3-ext/Plugins/CalendarSelectionConstrain/CalendarSelectionConstrain.js"></script>
+<script type="text/javascript" src="../../yui-3-ext/Plugins/CalendarSelectionConstrain/CalendarSelectionConstrain.js"></script -->
 <script type="text/javascript" src="CalendarTester.js"></script>
 
 </head>
